Header quiz item fix ( too long text

--- a/src/components/QuestionInput/QuestionHeaderInput/QuestionHeaderInput.module.scss
+++ b/src/components/QuestionInput/QuestionHeaderInput/QuestionHeaderInput.module.scss
@@ -7,7 +7,10 @@
   align-items: center;
 
   & p {
+    max-width: 300px;
+    overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   & label {
