--- a/src/domain/Quizes/QuizSettingsModal/QuizSettingsModal.module.scss
+++ b/src/domain/Quizes/QuizSettingsModal/QuizSettingsModal.module.scss
@@ -1,4 +1,5 @@
 .formRoot {
+  max-width: 70vw;
   .questionList {
     padding: 15px 0;
   }
